[package]
name = "radio-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "The Radio trait and shared types for HammerHead — a control plane for radios that don't have one."

[dependencies]
async-trait = "0.1"
bitflags = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
